# drf123

./: .env.sample  .gitignore  README.md  payments_data.json  pyproject.toml
config/: settings.py  urls.py
education/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
education/migrations/: 0001_initial.py  0002_lesson_course.py  0003_course_user_lesson_user.py  0004_subscription.py  0005_course_date_preview_course_date_update.py
payments/: models.py  serializers.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_payments_user.py  0003_payments_is_paid_payments_session_id.py
user/: models.py  urls.py
user/management/commands/: csu.py
user/migrations/: 0001_initial.py  0002_user_role.py  0003_alter_user_last_login.py
